# directoryd

./: Avahi.cpp  Avahi.hpp  Browser.cpp  Browser.hpp  CMakeLists.txt  README  Registrar.cpp  Registrar.hpp  Service.hpp  ServiceGroup.hpp  Services.proto  TestMain.java  generator.py  launch.sh  main.cpp  query_script.sh  register_script.sh  simple_server.cpp  test_browse.cpp  test_register.cpp
ddclient/: ddclient.cpp  ddclient.hpp  query.cpp  query.hpp  register.cpp  register.hpp  test_query.cpp  test_register.cpp
protobuf/: Services.pb.cc  Services.pb.cc.OLD  Services.pb.h  Services.pb.h.OLD
